--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -7,7 +7,7 @@ jobs:
       fail-fast: false
       matrix:
         # run 3 copies of the current job in parallel
-        containers: [1, 2, 3]
+        containers: [1, 2, 3, 4, 5]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
