--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -18,6 +18,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          ref: ${{ github.event.pull_request.head.sha }}
 
       # Install Currents
       - name: Install currents
