--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Run Cypress on Currents.dev
         uses: cypress-io/github-action@v2
         with:
-          command: yarn currents run --record --parallel --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
+          command: yarn currents run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
