--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -28,5 +28,7 @@ jobs:
       # Run all Cypress tests
       - name: Run Cypress on Currents.dev
         uses: cypress-io/github-action@v2
+        env:
+          DEBUG: cypress:server:record:ci-info
         with:
           command: yarn currents run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
