chore: remove cy2 dep

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cy2": "^2.0.0",
+    "@currents/cli": "3.0.0-beta.5",
     "cypress": "^11.0.1"
   }
 }
