--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -17,7 +17,8 @@ jobs:
         containers: [1, 2, 3]
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
+        # populate commit message for merge commits
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
