--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
         # populate commit message for merge commits
+        # see ://currents.dev/readme/ci-setup/github-actions
         with:
           ref: ${{ github.event.pull_request.head.sha }}
 
