--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@currents/cli": "3.0.0-beta.5",
-    "cypress": "^11.0.1"
+    "cypress": "^12.5.1",
+    "cypress-cloud": "^1.4.4",
+    "typescript": "^4.9.5"
   }
 }
