--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@currents/cli": "3.0.0-beta.5",
-    "cypress": "^11.0.1"
+    "cypress": "^12.8.1",
+    "cypress-cloud": "^1.5.5"
   }
 }
