--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -25,11 +25,13 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
       # Install Currents
       - name: Install dependencies
-        run: npm ci
+        run: |
+          npm config ls -l
+          npm ci
 
       # Run all Cypress tests
       - name: Run Cypress on Currents.dev
