--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^12.8.1",
-    "cypress-cloud": "^1.5.5",
-    "uri-js": "^4.4.1",
-    "ws": "^8.13.0"
+    "cypress-cloud": "^1.5.6"
   }
 }
