--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -30,7 +30,7 @@ jobs:
       # Install Currents
       - name: Install dependencies
         run: |
-          npm ci
+          yarn install --frozen-lockfile
 
       # Run all Cypress tests
       - name: Run Cypress on Currents.dev
