--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "^12.8.1",
-    "cypress-cloud": "^1.5.6"
+    "cypress-cloud": "^1.5.6",
+    "typescript": "^5.0.2"
   }
 }
