Run GH Actions on push

--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -1,11 +1,7 @@
 name: Cypress Tests
 
 on:
-  pull_request:
-    types:
-      - opened
-      - edited
-      - synchronize
+  push:
 
 jobs:
   cypress-tests:
