--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -35,3 +35,12 @@ jobs:
         uses: cypress-io/github-action@v4
         with:
           command: yarn cypress-cloud run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY_STAGING }} --ci-build-id ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}
+
+      - name: Cancel the run if workflow is cancelled
+        if: ${{ cancelled() }}
+        uses: vCaisim/cancel-currents-run-action@v1
+        with:
+          currents-api-url: "https://api-staging.currents.dev/v1"
+          bearer-token: ${{ secrets.CURRENTS_API_KEY_STAGING }}
+          github-run-id: ${{ github.run_id }}
+          github-run-attempt: ${{ github.run_attempt }}
