--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -33,12 +33,12 @@ jobs:
       - name: Run Cypress on Currents.dev
         uses: cypress-io/github-action@v4
         with:
-          command: yarn cypress-cloud run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}
+          command: yarn cypress-cloud run --record --parallel --browser chrome --key YakSabgBLb7D40nZ --ci-build-id ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}
 
       - name: Cancel the run if workflow is cancelled
         if: ${{ cancelled() }}
         uses: currents-dev/cancel-run-gh-action@v1
         with:
-          api-token: ${{ secrets.CURRENTS_API_KEY }}
+          api-token: YakSabgBLb7D40nZ
           github-run-id: ${{ github.run_id }}
           github-run-attempt: ${{ github.run_attempt }}
