use custom mirror

--- a/.github/workflows/v5.yml
+++ b/.github/workflows/v5.yml
@@ -35,4 +35,6 @@ jobs:
           wait-on: https://en.wikipedia.org
           wait-on-timeout: 120
           install: false
-          command: yarn currents run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
+          command: |
+            CYPRESS_DOWNLOAD_MIRROR=https://cy-cdn.currents.dev npx cypress install --force
+            yarn currents run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
