--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@currents/cli": "3.0.0-beta.5",
-    "cypress": "^11.0.1"
+    "cypress": "^12.17.4",
+    "cypress-cloud": "^1.9.6",
+    "cypress-debugger": "^1.0.9"
   }
 }
