--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -31,10 +31,13 @@ jobs:
 
       # Run all Cypress tests
       - name: Run Cypress on Currents.dev
-        uses: cypress-io/github-action@v4
+        uses: cypress-io/github-action@v6
+        env:
+          CYPRESS_DOWNLOAD_MIRROR: https://cy-cdn.currents.dev
         with:
+          install: true
           command: |
-            CYPRESS_DOWNLOAD_MIRROR=https://cy-cdn.currents.dev npx cypress install --force
+            npx cypress install --force && \
             yarn currents run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
 
       - name: Cancel the run if workflow is cancelled
