--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -34,11 +34,10 @@ jobs:
         uses: cypress-io/github-action@v6
         env:
           CYPRESS_DOWNLOAD_MIRROR: https://cy-cdn.currents.dev
+
         with:
-          install: true
           command: |
-            npx cypress install --force && \
-            yarn currents run --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
+            npm run currents:custom -- --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
 
       - name: Cancel the run if workflow is cancelled
         if: ${{ cancelled() }}
