--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -28,7 +28,8 @@ jobs:
         run: |
           npm ci
           CYPRESS_DOWNLOAD_MIRROR=https://cy-cdn.currents.dev npx cypress install --force
-          file  /root/.cache/Cypress/12.17.4/Cypress/Cypress
+          npx cypress cache path
+          npx cypress cache list
 
         # Run all Cypress tests
       - name: Run Cypress on Currents.dev
