--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -21,15 +21,16 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 16
 
       # Install Currents
       - name: Install dependencies
         run: |
-          npm ci
+          yarn install --frozen-lockfile
           CYPRESS_DOWNLOAD_MIRROR=https://cy-cdn.currents.dev npx cypress install --force
-          npx cypress cache path
-          npx cypress cache list
+          yarn cypress cache list
+          yarn cypress cache path
+          file `yarn cypress cache path`/12.17.4/Cypress/Cypress
 
         # Run all Cypress tests
       - name: Run Cypress on Currents.dev
@@ -38,7 +39,7 @@ jobs:
 
         with:
           command: |
-            npx cypress-cloud --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
+            yarn cypress-cloud --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
 
       - name: Cancel the run if workflow is cancelled
         if: ${{ cancelled() }}
