--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -61,6 +61,7 @@ jobs:
         continue-on-error: true
 
         with:
+          install: false
           cache-key: "new-cypress-cache-key"
           command: |
             yarn cypress-cloud --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id "${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}"
