--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -34,10 +34,8 @@ jobs:
           echo 👀 Cypress SHA before
           file `npx cypress cache path`/12.17.4/Cypress/Cypress
 
-          # echo 🕊️ Download Free Cypress
-          # CYPRESS_DOWNLOAD_MIRROR=https://cy-cdn.currents.dev npx cypress install --force
-
-          npx cypress install --force
+          echo 🕊️ Download Free Cypress
+          CYPRESS_DOWNLOAD_MIRROR=https://cy-cdn.currents.dev npx cypress install --force
 
           echo 🕊️ Verify Cypress
           npx cypress verify
