--- a/.github/workflows/currents.yml
+++ b/.github/workflows/currents.yml
@@ -23,6 +23,10 @@ jobs:
         with:
           node-version: 16
 
+      - name: Print Env variables
+        run: |
+          printenv
+
       # Install Currents
       - name: Install dependencies
         run: |
