--- a/.github/workflows/currents-staging.yml
+++ b/.github/workflows/currents-staging.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
       - name: Print Event Payload
         run: |
@@ -62,7 +62,7 @@ jobs:
           # 🔥 Set to false to prevent restoring cached blocking Cypress binary
           install: false
           command: |
-            npx cypress-cloud --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}
+          CURRENTS_API_URL=https://cy-staging.currents.dev CURRENTS_PROJECT_ID=9aOuF6 CURRENTS_ENFORCE_IS_CURRENTS=1 npx cypress-cloud --record --parallel --browser chrome --key ${{ secrets.CURRENTS_RECORD_KEY }} --ci-build-id ${{ github.repository }}-${{ github.run_id }}-${{ github.run_attempt}}
 
       - name: Cancel the run if workflow is cancelled
         if: ${{ cancelled() }}
