--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "cypress": "12.17.4",
-    "cypress-cloud": "1.10.0-alpha.0",
+    "cypress-cloud": "^1.10.0",
     "typescript": "^5.0.2"
   }
 }
